Quick header fix
Need extra padding on h2 otherwise some headers are hidden on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -119,7 +119,7 @@ h1 {
 h2 {
 	font-size: 50px;
 	@include for-phone-only {
-		margin-top: 20px;
+		margin-top: 30px;
 		font-size: 20px;
 
 	}
